Sprint 4 - Refactor y ultimos tests de tiempo y dificultad

--- a/AhorcadoTests/WordleTests.csproj
+++ b/AhorcadoTests/WordleTests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Sprint3Tests.cs" />
     <Compile Include="Sprint2Tests.cs" />
     <Compile Include="Sprint1Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
