--- a/Ahorcado/Wordle.csproj
+++ b/Ahorcado/Wordle.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F17942B5-5526-4061-8870-F1E5E227DF6E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ahorcado</RootNamespace>
-    <AssemblyName>Ahorcado</AssemblyName>
+    <RootNamespace>Wordle</RootNamespace>
+    <AssemblyName>Wordle</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
