--- a/AhorcadoTests/WordleTests.csproj
+++ b/AhorcadoTests/WordleTests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{CA3FADA9-0BE4-47D1-8BB2-10057C76AF16}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AhorcadoTests</RootNamespace>
-    <AssemblyName>AhorcadoTests</AssemblyName>
+    <RootNamespace>WordleTests</RootNamespace>
+    <AssemblyName>WordleTests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
